[tool.poetry]
name = "Penn Data Challenge"
version = "0.1.0"
description = "Data challenge for Data Scientist position"
authors = ["JasonLee-23 <jason.lee@aptiveresources.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
sklearn = "^0.0"
keras = "^2.4.3"
tensorflow = "^2.5.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
mypy = "^0.910"
flake8 = "^3.9.2"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
